# lidar-based-localization-and-pcd-map-reconstruction

./: LICENSE  README.md  lidarBasedSolutionPipeline.pptx
MatlabTrial/: lidarProcessing.mlx
lidar_pose_estimator/: CMakeLists.txt  package.xml
lidar_pose_estimator/config/: micropolisConfig.rviz
lidar_pose_estimator/include/lidar_pose_estimator/: evaluation_node.hpp  lidar_pose_estimator_node.hpp
lidar_pose_estimator/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lidar_pose_estimator/install/lidar_pose_estimator/lib/lidar_pose_estimator/: lidar_pose_estimator_node
lidar_pose_estimator/install/lidar_pose_estimator/share/ament_index/resource_index/package_run_dependencies/: lidar_pose_estimator
lidar_pose_estimator/install/lidar_pose_estimator/share/lidar_pose_estimator/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
lidar_pose_estimator/install/lidar_pose_estimator/share/lidar_pose_estimator/cmake/: lidar_pose_estimatorConfig.cmake
lidar_pose_estimator/log/: latest_build
lidar_pose_estimator/src/: evaluation_node.cpp  lidar_pose_estimator_node.cpp
tmp/: lidar_tum.txt  lidar_tum_eval.txt  pose_error.csv  qos_override.yaml
