<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_pose_estimator</name>
  <version>0.2.0</version>
  <description>
    Lidar based pose estimation and point cloud map construction, with evaluation node to 
    evaluate based on enu data as ground truth.
  </description>

  <maintainer email="hazemmohsen07@gmail.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--ROS2 dependencies-->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <!--TF2 dependincies-->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>

  <!--PCL dependencies-->
  <depend>pcl_conversions</depend>
  <build_depend>libpcl-all-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
